# vcf2tab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: functions.rs  main.rs
